// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardPageComponent should not render the template if there is no vm 1`] = `
<div
  id="root0"
  ng-version="19.2.9"
>
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if the user is customer 1`] = `
<div
  id="root2"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-blue-700"
                ng-reflect-ng-class="[object Object]"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         title 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         role 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    lastText
                  </small>
                  <time>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         last 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if the user is pilot 1`] = `
<div
  id="root4"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-green-700"
                ng-reflect-ng-class="[object Object]"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         title 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         role 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    lastText
                  </small>
                  <time>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         last 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if the user is somebody from the office 1`] = `
<div
  id="root3"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-red-700"
                ng-reflect-ng-class="[object Object]"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         title 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         role 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    lastText
                  </small>
                  <time>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         last 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if there are 3 summaries 1`] = `
<div
  id="root7"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-red-700"
                ng-reflect-ng-class="[object Object]"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         title 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         role 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    lastText
                  </small>
                  <time>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         last 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum1 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-blue-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         1 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum2 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-blue-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         1 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum3 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-blue-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         1 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if there are different types of summaries 1`] = `
<div
  id="root8"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-red-700"
                ng-reflect-ng-class="[object Object]"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         title 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         role 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    lastText
                  </small>
                  <time>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         last 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum1 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-blue-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         1 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum2 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-green-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         2 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum3 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-purple-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         3 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum4 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-purple-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         4 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum5 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-blue-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         5 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum6 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-green-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         6 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if there is 1 summary 1`] = `
<div
  id="root6"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-red-700"
                ng-reflect-ng-class="[object Object]"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         title 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         role 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    lastText
                  </small>
                  <time>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         last 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <app-summary-item>
                <div
                  class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
                >
                  <span
                    class="text-2xl"
                  >
                    *
                  </span>
                  <div>
                    <h4
                      class="text-gray-700 font-medium"
                    >
                       sum1 
                    </h4>
                    <app-value
                      class="text-2xl font-semibold tracking-wider text-blue-700"
                      ng-reflect-ng-class="[object Object]"
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         1 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </div>
                </div>
              </app-summary-item>
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if there is a vm provided 1`] = `
<div
  id="root1"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-blue-700"
                ng-reflect-ng-class="[object Object]"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         title 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         role 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    lastText
                  </small>
                  <time>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         last 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;

exports[`DashboardPageComponent should render the template correctly if there is no summary 1`] = `
<div
  id="root5"
  ng-version="19.2.9"
>
  <app-page-layout>
    <section
      class="flex flex-col gap-y-10 mx-5 sm:mx-20 lg:mx-32"
    >
      <app-frame>
        <section
          class="flex flex-col gap-y-10 py-10"
        >
          <!--container-->
          <app-user-header>
            <header
              class="flex flex-row items-center space-x-3"
            >
              <span
                class="h-8 w-8 rounded-full bg-red-700"
                ng-reflect-ng-class="[object Object]"
              />
              <div
                class="w-full flex flex-row justify-between space-x-10"
              >
                <div
                  class="flex flex-col"
                >
                  <h2>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         title 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </h2>
                  <p
                    class="text-gray-600"
                  >
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         role 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </p>
                </div>
                <div
                  class="flex flex-col justify-end"
                >
                  <small
                    class="text-gray-600"
                  >
                    lastText
                  </small>
                  <time>
                    <app-value
                      ng-reflect-vm="[object Object]"
                    >
                      <div>
                        <!--container-->
                         last 
                        <!--container-->
                      </div>
                      <!--container-->
                    </app-value>
                  </time>
                </div>
              </div>
            </header>
          </app-user-header>
          <app-summary-item-list>
            <div
              class="flex flex-row flex-wrap gap-5 w-full"
            >
              <!--container-->
            </div>
          </app-summary-item-list>
          <router-outlet />
          <!--container-->
        </section>
        <!--container-->
      </app-frame>
    </section>
  </app-page-layout>
  <!--container-->
  <!--container-->
</div>
`;
